--- a/src/Doggo.Discord.Core/Doggo.Discord.Core.csproj
+++ b/src/Doggo.Discord.Core/Doggo.Discord.Core.csproj
@@ -1,7 +1,16 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp1.1</TargetFramework>
+    <RootNamespace>Doggo.Discord</RootNamespace>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Discord.Net" Version="1.0.0-rc-00642" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Core\src\Doggo.Core\Doggo.Core.csproj" />
+  </ItemGroup>
 
 </Project>
